--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 
@@ -84,10 +91,19 @@ a {
 }
 
 .test-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
   height: 100vh;
   padding: 2rem;
@@ -109,12 +125,18 @@ a {
 /* GENERAL ELEMENTS */
 .section {
   padding: 15rem 15rem;
+  -webkit-transition: opacity 1s, -webkit-transform 1s;
+  transition: opacity 1s, -webkit-transform 1s;
+  -o-transition: transform 1s, opacity 1s;
   transition: transform 1s, opacity 1s;
+  transition: transform 1s, opacity 1s, -webkit-transform 1s;
 }
 
 .section--hidden {
   opacity: 0;
-  transform: translateY(8rem);
+  -webkit-transform: translateY(8rem);
+      -ms-transform: translateY(8rem);
+          transform: translateY(8rem);
 }
 
 .section__title {
@@ -164,6 +186,7 @@ a {
 	box-shadow: rgba(12, 12, 12, 0.1) 1px 3px 5px;
 	-webkit-transition: background 0.4s; */
 	-o-transition: background 0.4s;
+	-webkit-transition: background 0.4s;
 	transition: background 0.4s;
 }
 
@@ -192,6 +215,8 @@ a {
 }
 
 .navbar .nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -213,9 +238,13 @@ a {
   padding: 1rem 1.4rem 1rem 1rem;
   width: 100%;
   color: inherit;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
   transition: all 0.3s;
 }
 .nav-item {
+  -webkit-transition: opacity .25s ease-in-out;
+  -o-transition: opacity .25s ease-in-out;
   transition: opacity .25s ease-in-out;
 }
 
@@ -236,6 +265,8 @@ a {
   width: 25px;
   height: 3px;
   margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background-color: var(--text-secondary);
 }
@@ -300,32 +331,54 @@ input:checked + .slider:before {
 /* ========== HOMEPAGE ========== */
 /* Section colors */
 .center{
+  display:-webkit-box;
+  display:-ms-flexbox;
   display:flex; 
-  justify-content:center;
-  align-items:center;
+  -webkit-box-pack:center; 
+      -ms-flex-pack:center; 
+          justify-content:center;
+  -webkit-box-align:center;
+      -ms-flex-align:center;
+          align-items:center;
   height:100vh;
   }
 /* HEADER */
 .header {
   padding: 0 3rem;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__title {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   height:100vh;
   padding: 0 3rem;
   margin: auto;
   max-width: 80rem;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 3fr 2fr;
   grid-template-columns: 3fr 2fr;
   row-gap: 3rem;
-  align-content: center;
-  justify-content: center;
-  align-items: start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
   justify-items: start;
 }
 
@@ -342,13 +395,23 @@ h4 {
 
 .header__img {
   width: 100%;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 4;
   grid-row: 1 / span 4;
-  transform: translateY(-6rem);
+  -webkit-transform: translateY(-6rem);
+      -ms-transform: translateY(-6rem);
+          transform: translateY(-6rem);
   z-index: -1;
   border-radius: 50%;
-  object-fit: cover;
-  object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
   background: var(--gradient-primary);
   padding: 6px;
@@ -370,7 +433,9 @@ h4 {
   width: 100%;
   z-index: -1;
   opacity: 0.7;
-  transform: scale(1.07, 1.05) skewX(-15deg);
+  -webkit-transform: scale(1.07, 1.05) skewX(-15deg);
+      -ms-transform: scale(1.07, 1.05) skewX(-15deg);
+          transform: scale(1.07, 1.05) skewX(-15deg);
   background-image: var(--gradient-primary);
 }
 
@@ -390,7 +455,9 @@ h4 {
   width: 100%;
   z-index: -1;
   opacity: 0.7;
-  transform: scale(1.07, 1.05) skewX(-15deg);
+  -webkit-transform: scale(1.07, 1.05) skewX(-15deg);
+      -ms-transform: scale(1.07, 1.05) skewX(-15deg);
+          transform: scale(1.07, 1.05) skewX(-15deg);
   background-image: var(--gradient-primary);
 }
 
@@ -405,6 +472,8 @@ h4 {
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
   cursor: pointer;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
   transition: all 0.3s;
 }
 
@@ -415,7 +484,9 @@ h4 {
 
 /* ========== PROJECTS ========== */
 .features {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 4rem 1fr;
   grid-template-columns: 1fr 1fr;
   gap: 4rem;
   margin: 0 auto;
@@ -426,16 +497,25 @@ h4 {
 }
 
 .features__feature {
-  align-self: center;
-  justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
   width: 100%;
   font-size: 1.5rem;
 }
 
 .features__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: var(--color-primary-opacity);
   height: 5.5rem;
   width: 5.5rem;
@@ -463,8 +543,12 @@ h4 {
 
 .footer__nav {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   /* margin-bottom: 5rem; */
 }
 
@@ -585,11 +669,15 @@ h4 {
   }
 
   .hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
+    -webkit-transform: translateY(8px) rotate(45deg);
+        -ms-transform: translateY(8px) rotate(45deg);
+            transform: translateY(8px) rotate(45deg);
   }
 
   .hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+        -ms-transform: translateY(-8px) rotate(-45deg);
+            transform: translateY(-8px) rotate(-45deg);
   }
 
   .test-section p {
@@ -621,15 +709,23 @@ h4 {
 
   .header__img {
     width: 100%;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 4;
     grid-row: 1 / span 4;
-    transform: translateY(-1rem);
+    -webkit-transform: translateY(-1rem);
+        -ms-transform: translateY(-1rem);
+            transform: translateY(-1rem);
     z-index: -1;
     margin-bottom: 1rem;
   }
 
   .features {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 2rem 1fr;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     margin: 0 auto;
@@ -650,9 +746,15 @@ h4 {
   }
 
   .features__icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     background-color: var(--color-primary-opacity);
     height: 3rem;
     width: 5.5rem;
@@ -700,9 +802,15 @@ h4 {
 
   .header__img {
     width: 100%;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 4;
     grid-row: 1 / span 4;
-    transform: translateY(-1rem);
+    -webkit-transform: translateY(-1rem);
+        -ms-transform: translateY(-1rem);
+            transform: translateY(-1rem);
     z-index: -1;
   }
 
@@ -727,14 +835,22 @@ h4 {
 
   .header__img {
     width: 100%;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 4;
     grid-row: 1 / span 4;
-    transform: translateY(-1rem);
+    -webkit-transform: translateY(-1rem);
+        -ms-transform: translateY(-1rem);
+            transform: translateY(-1rem);
     z-index: -1;
   }
 
   .features {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns:  auto;
     grid-template-columns:  auto;
     gap: 4rem;
     margin: 0 auto;
@@ -754,9 +870,15 @@ h4 {
   }
 
   .features__icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     background-color: var(--color-primary-opacity);
     height: 3rem;
     width: 1.5rem;
@@ -775,4 +897,3 @@ h4 {
     font-weight: 400;
 }
 }
-
