--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 */
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 /* ========== Variables ========== */
@@ -263,7 +264,7 @@ input:checked + .slider:before {
 .hero_wrapper h1 {
     font-family: "Kaushan Script", cursive;
     margin-bottom: 26px;
-    font-size: 50px;
+    font-size: clamp(2.5rem, 2.5vw, 3.125rem); 
     line-height: 1.3;
     font-weight: 300;
     color: var(--secondary-text);
@@ -286,6 +287,7 @@ input:checked + .slider:before {
 }
 .hero_wrapper h3 {
     font-size: 16px;
+    font-size: clamp(0.85rem, 2.5vw, 1rem); 
     margin-bottom: 1rem;
     color: var(--secondary-text);
 }
@@ -300,54 +302,6 @@ input:checked + .slider:before {
 .hero_social i:hover {
     color: var(--primary-background);
 }
-/* .hero {
-    width: 100%;
-    height: 100vh;
-    background: url(../img/hero-bg.jpg) top right no-repeat;
-    background-size: cover;
-    position: relative;
-}
-.hero_title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-.hero_left {
-    max-width: 100%;
-    margin-right: 28px;
-}
-.hero_title h1 {
-    font-size: 3.4rem;
-    line-height: 1.35;
-}
-.hero_title h4 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: var(--secondary-text);
-    margin: 2rem 0rem;
-}
-.hero_img {
-    z-index: -1;
-    border-radius: 50%;
-    background: var(--gradient-primary);
-    padding: 4px;
-}
-.hero_social {
-    text-align: center;
-}
-.hero_social i {
-    color: #697477;
-    font-size: 1.4rem;
-    margin: 0 0.5rem;
-}
-.hero_social i:hover {
-    color: var(--primary-color);
-} */
 .highlight {
     position: relative;
     z-index: -1;
@@ -407,32 +361,31 @@ input:checked + .slider:before {
 }
 /* ========== ABOUT =========== */
 /* Create two equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 50%;
-    padding: 10px;
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
   }
   
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  .column {
+    flex-basis: 50%;
+    padding: 10px;
+    box-sizing: border-box;
   }
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
+    .row {
+        flex-direction: column;
     }
   }
   
 /* ========== ABOUT ========== */
-.skills{
+.skills {
     width: 100%;
 }
 
-.skill-name{
+.skill-name {
     font-size: 16px;
     font-weight: 500;
     color: var(--primary-text);
@@ -440,21 +393,19 @@ input:checked + .slider:before {
     margin-top: 10px;
 }
 
-.skill-bar{
+.skill-bar {
     height: 14px;
     background: var(--primary-text);
     border-radius: 3px;
 }
 
-.skill-per{
+.skill-per {
     height: 14px;
     background: var(--gradient-primary-reverse);
     border-radius: 3px;
     position: relative;
-    animation: fillBars 2.5s;
 }
-
-.skill-per::before{
+.skill-per::before {
     content: attr(per);
     position: absolute;
     padding: 0px 6px;
@@ -466,8 +417,7 @@ input:checked + .slider:before {
     right: 0;
     transform: translateX(50%);
 }
-
-.skill-per::after{
+.skill-per::after {
     content: "";
     position: absolute;
     width: 10px;
@@ -478,11 +428,19 @@ input:checked + .slider:before {
     transform: translateX(50%) rotate(45deg);
     border-radius: 2px;
 }
+.fill_bar {
+    width: attr(per); 
+}
+
+.fill_bar.animated {
+    animation: fillBars 3s;
+}
 
 @keyframes fillBars{
     from { width: 0%; }
     to { width: 100%; }
 }
+
 /* ========== SKILLS ========== */
 .skills_wrapper {
     width: 100%;
@@ -775,41 +733,6 @@ input:checked + .slider:before {
         -webkit-transform: translateY(-8px) rotate(-45deg);
         -ms-transform: translateY(-8px) rotate(-45deg);
         transform: translateY(-8px) rotate(-45deg);
-    }
-    /* Skills */
-    .flex-skills {
-        max-width: 100vw;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        font-size: 30px;
-        text-align: center;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        margin: 0 auto;
-        padding: 3rem 20vw;
-    }
-    /* Projects */
-    .projects img {
-        max-width: 90%;
-    }
-
-    .projects p {
-        max-width: 100%;
-        padding: 1rem 2rem;
-        margin: 0 auto;
-    }
-    /* Education */
-    .card-container {
-        max-width: 350px;
-        padding: 20px;
     }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {}
